--- a/env_DNN_HMM.yml
+++ b/env_DNN_HMM.yml
@@ -1,66 +1,16 @@
 name: env_DNN_HMM
-  - _openmp_mutex=5.1=1_gnu
-  - blas=1.0=mkl
-  - brotli=1.0.9=h166bdaf_7
-  - brotli-bin=1.0.9=h166bdaf_7
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.9.24=ha878542_0
-  - certifi=2022.9.24=pyhd8ed1ab_0
-  - cudatoolkit=11.3.1=h2bc3f7f_2
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.10.4=h0708190_1
-  - giflib=5.2.1=h36c2ea0_2
-  - intel-openmp=2022.1.0=h9e868ea_3769
-  - jpeg=9e=h166bdaf_1
-  - lcms2=2.12=hddcbb42_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libblas=3.9.0=16_linux64_mkl
-  - libbrotlicommon=1.0.9=h166bdaf_7
-  - libbrotlidec=1.0.9=h166bdaf_7
-  - libbrotlienc=1.0.9=h166bdaf_7
-  - libcblas=3.9.0=16_linux64_mkl
-  - libffi=3.3=he6710b0_2
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - liblapack=3.9.0=16_linux64_mkl
-  - libpng=1.6.37=hbc83047_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libtiff=4.2.0=h85742a9_0
-  - libuuid=1.0.3=h7f8727e_2
-  - libwebp=1.2.4=h11a3e52_0
-  - libwebp-base=1.2.4=h5eee18b_0
-  - lz4-c=1.9.3=h9c3ff4c_1
-  - matplotlib-base=3.5.2=py310h5701ce4_0
-  - mkl=2022.1.0=hc2b9512_224
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=h5eee18b_3
-  - openssl=1.1.1q=h7f8727e_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - python=3.10.6=haa1d7c7_0
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - pytorch=1.12.1=py3.10_cuda11.3_cudnn8.3.2_0
-  - pytorch-mutex=1.0=cuda
-  - readline=8.1.2=h7f8727e_1
-  - six=1.16.0=pyh6c4a22f_0
-  - sqlite=3.39.3=h5082296_0
-  - tk=8.6.12=h1ccaba5_0
-  - typing_extensions=4.3.0=py310h06a4308_0
-  - tzdata=2022c=h04d1e81_0
-  - wheel=0.37.1=pyhd3eb1b0_0
-  - xz=5.2.6=h5eee18b_0
-  - zlib=1.2.12=h5eee18b_3
-  - zstd=1.4.9=ha95c52a_0
-  - pip:
-    - kiwisolver==1.4.2
-    - matplotlib==3.5.2
-    - numpy==1.22.3
-    - pillow==9.2.0
-    - pip==22.2.2
-    - setuptools==63.4.1
-    - torch==1.12.1
-    - typing-extensions==4.3.0
-prefix: /home/lptv/anaconda3/envs/dnn_hmm
-
+channels:
+  - conda-forge
+  - anaconda
+  - defaults
+dependencies:
+  - numpy=1.21.6
+  - kaldi-io=0.9.4
+  - kaldiio=2.17.2
+  - obspy=1.2.2
+  - scipy=1.7.3
+  - ipython=7.8.0
+  - torch=1.11.0
+  - sklearn=1.1.3
+  - matplotlib=3.1.1
+  - pandas=1.3.5
