--- a/env_DNN_HMM.yml
+++ b/env_DNN_HMM.yml
@@ -10,7 +10,7 @@ dependencies:
   - obspy=1.2.2
   - scipy=1.7.3
   - ipython=7.8.0
-  - torch=1.11.0
+  - pytorch=1.11.0
   - sklearn=1.1.3
   - matplotlib=3.1.1
   - pandas=1.3.5
