--- a/env_DNN_HMM.yml
+++ b/env_DNN_HMM.yml
@@ -5,7 +5,7 @@ channels:
   - defaults
 dependencies:
   - numpy=1.21.6
-  - kaldi-io=0.9.4
+  - kaldi_io=0.9.4
   - kaldiio=2.17.2
   - obspy=1.2.2
   - scipy=1.7.3
